--- a/workflows/docker-compose.yml
+++ b/workflows/docker-compose.yml
@@ -35,7 +35,8 @@ services:
       - PGDATA=/var/lib/platformics/data
   workflows:
     build:
-      context: .
+      context: ".."
+      dockerfile: "workflows/Dockerfile"
       args:
         - BUILDKIT_INLINE_CACHE=1
     restart: always
@@ -45,11 +46,11 @@ services:
       # enable docker in docker
       - $PWD/test_workflows:$PWD/test_workflows
       - /var/run/docker.sock:/var/run/docker.sock
+      - ../platformics:/workflows/platformics
     ports:
       - 8042:8042
     stdin_open: true # Helps with pdb
     tty: true # Helps with pdb
-    command: uvicorn main:app --reload --host 0.0.0.0 --port 8042
     environment:
       <<: [*aws-variables, *db-variables, *workflow-variables]
       LOCAL_RUNNER_FOLDER: ${PWD}/test_workflows
