--- a/workflows/etc/supervisord.conf
+++ b/workflows/etc/supervisord.conf
@@ -22,7 +22,7 @@ serverurl=unix:///tmp/supervisor.sock         ; use a unix:// URL  for a unix so
 ; This is where we define the services that should run in our container
 
 [program:nginx]
-command=/usr/sbin/nginx -c /czid-platformics/entities/etc/nginx.conf
+command=/usr/sbin/nginx -c /workflows/etc/nginx.conf
 stderr_logfile = /dev/stderr
 stderr_logfile_maxbytes=0
 stdout_logfile = /dev/stdout
@@ -31,9 +31,9 @@ autostart = true
 autorestart = true
 startretries = 9999
 
-[program:entities]
-directory=/czid-platformics/entities
-command=gunicorn --reload -k platformics.api.uvicorn_worker.ReloadingWorker -c /czid-platformics/entities/platformics/api/gunicorn_conf.py api.main:app
+[program:workflows]
+directory=/workflows
+command=gunicorn --reload -k platformics.api.uvicorn_worker.ReloadingWorker -c /workflows/platformics/api/gunicorn_conf.py api.main:app
 environment=PYTHONUNBUFFERED=1
 stderr_logfile = /dev/stderr
 stderr_logfile_maxbytes=0
