--- a/workflows/pyproject.toml
+++ b/workflows/pyproject.toml
@@ -28,6 +28,8 @@ boto3 = "^1.28.12"
 semver = "^3.0.1"
 sgqlc = "^16.3"
 psycopg-binary = "^3.1.10"
+gql = {extras = ["all"], version = "^3.4.1"}
+pydantic = "^2.3.0"
 
 
 [build-system]
