--- a/workflows/etc/supervisord.conf
+++ b/workflows/etc/supervisord.conf
@@ -1,5 +1,5 @@
 [unix_http_server]
-file=/tmp/supervisor.sock                       ; path to your socket file
+file=/var/run/supervisor.sock                       ; path to your socket file
 
 [supervisord]
 logfile=/dev/stdout                             ; supervisord log file
@@ -17,7 +17,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 ; Configure the CLI utility
 [supervisorctl]
-serverurl=unix:///tmp/supervisor.sock         ; use a unix:// URL  for a unix socket
+serverurl=unix:///var/run/supervisor.sock         ; use a unix:// URL  for a unix socket
 
 ; This is where we define the services that should run in our container
 
@@ -34,6 +34,18 @@ startretries = 9999
 [program:workflows]
 directory=/workflows
 command=gunicorn --reload -k platformics.api.uvicorn_worker.ReloadingWorker -c /workflows/platformics/api/gunicorn_conf.py api.main:app
+environment=PYTHONUNBUFFERED=1
+stderr_logfile = /dev/stderr
+stderr_logfile_maxbytes=0
+stdout_logfile = /dev/stdout
+stdout_logfile_maxbytes=0
+autostart = true
+autorestart = true
+startretries = 9999
+
+[program:loaders]
+directory=/workflows
+command=python3 run_loader.py
 environment=PYTHONUNBUFFERED=1
 stderr_logfile = /dev/stderr
 stderr_logfile_maxbytes=0
