--- a/workflows/Dockerfile
+++ b/workflows/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.11-slim-bookworm
 
 RUN apt-get update && \
     apt-get install -y \
-      python3-pip
+      python3-pip nginx nginx-extras procps
 
 ENV POETRY_VERSION=1.5
 # Some base python dependencies to kickstart our container build.
