--- a/.github/workflows/entities-push-tests.yml
+++ b/.github/workflows/entities-push-tests.yml
@@ -6,10 +6,12 @@ on:
       - main
     paths:
       - "entities/**"
+      - "common/**"
   pull_request:
     branches: "**"
     paths:
       - "entities/**"
+      - "common/**"
 
 jobs:
   py-lint:
