--- a/entities/etc/nginx.conf
+++ b/entities/etc/nginx.conf
@@ -27,7 +27,7 @@ http {
 
   upstream fastapi_server {
     # for UNIX domain socket setups
-    server unix:///var/run/entities.sock fail_timeout=0;
+    server unix:///var/run/fastapi.sock fail_timeout=0;
   }
 
   server {
