--- a/entities/etc/supervisord.conf
+++ b/entities/etc/supervisord.conf
@@ -33,7 +33,7 @@ startretries = 9999
 
 [program:entities]
 directory=/czid-platformics/entities
-command=gunicorn --reload -k api.uvicorn_worker.ReloadingWorker -c /czid-platformics/entities/api/gunicorn_conf.py api.main:app
+command=gunicorn --reload -k platformics.api.uvicorn_worker.ReloadingWorker -c /czid-platformics/entities/platformics/api/gunicorn_conf.py api.main:app
 environment=PYTHONUNBUFFERED=1
 stderr_logfile = /dev/stderr
 stderr_logfile_maxbytes=0
