--- a/workflows/pyproject.toml
+++ b/workflows/pyproject.toml
@@ -30,6 +30,10 @@ sgqlc = "^16.3"
 psycopg-binary = "^3.1.10"
 gql = {extras = ["all"], version = "^3.4.1"}
 pydantic = "^2.3.0"
+cerbos = "^0.10.1"
+jwcrypto = "^1.5.0"
+pydantic-settings = "^2.0.3"
+uuid6 = "^2023.5.2"
 
 
 [build-system]
