--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -37,6 +37,7 @@ mypy = "^1.5.1"
 types-requests = "^2.31.0.2"
 boto3 = "^1.28.43"
 boto3-stubs = "^1.28.50"
+faker-enum = "^0.0.2"
 
 [build-system]
 requires = ["poetry-core"]
