--- a/entities/docker-compose.yml
+++ b/entities/docker-compose.yml
@@ -45,8 +45,8 @@ services:
       - DEFAULT_UPLOAD_BUCKET=local-bucket
       - BOTO_ENDPOINT_URL=http://motoserver.czidnet:4000
       - AWS_REGION=us-west-2
-      - AWS_ACCESS_KEY_ID=ACCESS_ID
-      - AWS_SECRET_ACCESS_KEY=ACCESS_KEY
+      - AWS_ACCESS_KEY_ID=test
+      - AWS_SECRET_ACCESS_KEY=test
       # TODO - these are keypairs for testing only! Do not use in prod!!
       - JWK_PUBLIC_KEY_FILE=/czid-platformics/entities/test_infra/fixtures/public_key.pem
       - JWK_PRIVATE_KEY_FILE=/czid-platformics/entities/test_infra/fixtures/private_key.pem
