--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -38,6 +38,7 @@ types-requests = "^2.31.0.2"
 boto3 = "^1.28.43"
 boto3-stubs = {extras = ["s3"], version = "^1.28.50"}
 faker-enum = "^0.0.2"
+biopython = "^1.81"
 
 [build-system]
 requires = ["poetry-core"]
