add run input notification and run step creation

--- a/workflows/Dockerfile
+++ b/workflows/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.11-slim-bookworm
 
 RUN apt-get update && \
     apt-get install -y \
-      python3-pip nginx nginx-extras procps
+      python3-pip nginx nginx-extras procps git
 
 ENV POETRY_VERSION=1.5
 # Some base python dependencies to kickstart our container build.
@@ -23,5 +23,6 @@ COPY workflows/ .
 COPY platformics ./platformics
 
 RUN pip install plugins/*/*
+RUN pip install git+https://github.com/chanzuckerberg/miniwdl-viz.git
 
 CMD ["/usr/local/bin/supervisord", "-c", "/workflows/etc/supervisord.conf"]
