--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -39,6 +39,7 @@ boto3 = "^1.28.43"
 boto3-stubs = {extras = ["s3"], version = "^1.28.50"}
 faker-enum = "^0.0.2"
 biopython = "^1.81"
+moto = "^4.2.3"
 
 [build-system]
 requires = ["poetry-core"]
