start happy path setup

--- a/workflows/docker-compose.yml
+++ b/workflows/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       dockerfile: "workflows/Dockerfile"
       args:
         - BUILDKIT_INLINE_CACHE=1
+    image: "platformics-workflows"
     restart: always
     volumes:
       - .:/workflows
