--- a/workflows/pyproject.toml
+++ b/workflows/pyproject.toml
@@ -35,6 +35,7 @@ jwcrypto = "^1.5.0"
 pydantic-settings = "^2.0.3"
 uuid6 = "^2023.5.2"
 boto3-stubs = {extras = ["s3"], version = "^1.28.50"}
+black = "^23.9.1"
 
 
 [build-system]
