update entities config (still not working)

--- a/entities/.happy/config.json
+++ b/entities/.happy/config.json
@@ -44,13 +44,12 @@
                     "context": ".",
                     "dockerfile": "Dockerfile"
                 },
-                "health_check_path": "/graphql/",
+                "health_check_path": "/",
                 "name": "entities",
-                "path": "/graphql/*",
                 "platform_architecture": "arm64",
                 "port": 8008,
                 "priority": 0,
-                "service_type": "PRIVATE",
+                "service_type": "INTERNAL",
                 "success_codes": "200-499"
             }
         },
