--- a/workflows/.happy/config.json
+++ b/workflows/.happy/config.json
@@ -50,7 +50,7 @@
                 "platform_architecture": "arm64",
                 "port": 8042,
                 "priority": 0,
-                "service_type": "PRIVATE",
+                "service_type": "INTERNAL",
                 "success_codes": "200-499"
             }
         },
