try on pull requests

--- a/.github/workflows/workflows-github-tests.yml
+++ b/.github/workflows/workflows-github-tests.yml
@@ -3,7 +3,11 @@ name: Workflows tests
 on:
   push:
     branches:
-      - "**"
+      - main
+    paths:
+      - "workflows/**"
+  pull_request:
+    branches: "**"
     paths:
       - "workflows/**"
 
