--- a/.github/workflows/workflows-github-tests.yml
+++ b/.github/workflows/workflows-github-tests.yml
@@ -37,4 +37,4 @@ jobs:
         working-directory: workflows
         run: |
           make local-init
-          make local-tests
+          make local-db-tests
