--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -40,6 +40,8 @@ boto3-stubs = {extras = ["s3"], version = "^1.28.50"}
 faker-enum = "^0.0.2"
 biopython = "^1.81"
 moto = "^4.2.3"
+jinja2 = "^3.1.2"
+linkml = "^1.5.7"
 
 [build-system]
 requires = ["poetry-core"]
