--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,27 @@ services:
       - MOTO_ENABLE_RECORDING=True
       - MOTO_S3_CUSTOM_ENDPOINTS=http://motoserver.czidnet:4000
       - S3_IGNORE_SUBDOMAIN_BUCKETNAME=True
+      - MOTO_DOCKER_NETWORK_NAME=czidnet
+      - MOTO_DOCKER_NETWORK_MODE=overlay
     volumes:
       - .moto_recording:/moto/moto_recording
       - ./bin:/moto/bin
+      - "/var/run/docker.sock:/var/run/docker.sock"
     entrypoint: []
     command: ["/moto/bin/init_moto.sh"]
+  stepfunctions_local:
+    container_name: stepfunctions_local_workflows
+    image: amazon/aws-stepfunctions-local
+    environment:
+      - BATCH_ENDPOINT=http://motoserver.czidnet:4000
+      - LAMBDA_ENDPOINT=http://motoserver.czidnet:4000
+      - AWS_ACCOUNT_ID=123456789012
+    ports:
+      - "8083:8083"
+    networks:
+      default:
+        aliases:
+          - sfn.czidnet
 
 networks:
   default:
