--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -42,6 +42,8 @@ biopython = "^1.81"
 moto = "^4.2.3"
 jinja2 = "^3.1.2"
 linkml = "^1.5.7"
+jinja2-strcase = "^0.0.2"
+strcase = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
