--- a/workflows/pyproject.toml
+++ b/workflows/pyproject.toml
@@ -35,6 +35,8 @@ jwcrypto = "^1.5.0"
 pydantic-settings = "^2.0.3"
 uuid6 = "^2023.5.2"
 boto3-stubs = {extras = ["s3"], version = "^1.28.50"}
+black = "^23.9.1"
+mypy = "^1.5.1"
 
 
 [build-system]
@@ -43,6 +45,16 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 120
+
+[tool.mypy]
+explicit_package_bases = true
+ignore_missing_imports = true
+disallow_untyped_defs = true
+implicit_reexport = false
+exclude = [
+    'gql_schema\.py$',
+    '^platformics/thirdparty',
+]
 
 [tool.ruff]
 # Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
