--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -14,6 +14,11 @@ types:
     base: int
     description: An integer
 
+  uuid:
+    uri: xsd:string
+    base: str
+    description: A UUID
+
 enums:
   FileStatus:
     permissible_values:
@@ -47,8 +52,11 @@ classes:
     attributes:
       id:
         identifier: true
+        range: uuid
       type:
         range: string
+        required: true
+        designates_type: true
       producing_run_id:
         range: int
         minimum_value: 0
@@ -61,6 +69,9 @@ classes:
  
   File:
     attributes:
+      id:
+        identifier: true
+        range: uuid
       entity_field_name:
         range: string
         required: true
@@ -98,6 +109,7 @@ classes:
       sequencing_reads:
         range: SequencingRead
         multivalued: true
+        inverse: SequencingRead.sample
 
   SequencingRead:
     is_a: Entity
@@ -115,6 +127,7 @@ classes:
       sequence_file_id:
       sample:
         range: Sample
+        inverse: Sample.sequencing_reads
 
   Contig:
     is_a: Entity
