start db migrate script

--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -40,6 +40,7 @@ boto3-stubs = {extras = ["s3"], version = "^1.28.50"}
 faker-enum = "^0.0.2"
 biopython = "^1.81"
 moto = "^4.2.3"
+sqlalchemy_utils = "^0.41.1"
 
 [build-system]
 requires = ["poetry-core"]
