--- a/entities/.happy/config.json
+++ b/entities/.happy/config.json
@@ -44,16 +44,20 @@
                     "context": ".",
                     "dockerfile": "Dockerfile"
                 },
-                "health_check_path": "/",
+                "health_check_path": "/graphql",
                 "name": "entities",
                 "memory": "1000Mi",
+                "cpu": "2", 
                 "platform_architecture": "arm64",
                 "port": 8008,
-                "priority": 0,
-                "service_type": "INTERNAL",
-                "success_codes": "200-499"
+                "service_type": "INTERNAL"
             }
         },
         "stack_defaults": "git@github.com:chanzuckerberg/happy//terraform/modules/happy-stack-eks?ref=main"
+    },
+    "tasks": {
+        "migrate": [
+            "migrate"
+        ]
     }
 }
