--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -16,6 +16,7 @@ types:
 
   uuid:
     uri: xsd:string
+    typeof: str
     base: str
     description: A UUID
 
@@ -101,6 +102,8 @@ classes:
 
   Sample:
     is_a: Entity
+    mixins:
+      - EntityMixin
     attributes:
       name:
         required: true
@@ -113,6 +116,8 @@ classes:
 
   SequencingRead:
     is_a: Entity
+    mixins:
+      - EntityMixin
     attributes:
       nucleotide:
         range: Nucleotide
@@ -124,15 +129,32 @@ classes:
       protocol:
         range: SequencingProtocol
         required: true
-      sequence_file_id:
+      sequence_file:
+        range: File
       sample:
         range: Sample
         inverse: Sample.sequencing_reads
+      contigs:
+        range: Contig
+        multivalued: true
+        inverse: Contig.sequencing_read
 
   Contig:
     is_a: Entity
+    mixins:
+      - EntityMixin
     attributes:
-      sequencing_read_id:
-        required: true
+      sequencing_read:
+        range: SequencingRead
+        inverse: Sample.contigs
       sequence:
         required: true
+
+  EntityMixin:
+    mixin: true
+    attributes:
+      entity_id:
+        readonly: true
+        range: uuid
+        identifier: true
+        inverse: entity.id
