[CZID-8614] Mutation to add a file without uploading (#82)
* Make sure to save changes to DB

* Update tests

* Make file size optional since it gets set in validation stage

* Keep migrations separate

* Add env variable for default protocol

* Make separate file_upload mutation

* Update tests

* Codegen and lint

* Fix linter errors

* Refactor

* Cleanup

* Fix tests

* Add more tests

* Codegen

* Update strawberry types to make sure path/namespace/protocol cannot be set for uploads

--- a/entities/docker-compose.yml
+++ b/entities/docker-compose.yml
@@ -43,6 +43,7 @@ services:
       - PLATFORMICS_DATABASE_PASSWORD=password_postgres
       - PLATFORMICS_DATABASE_NAME=entities
       - DEFAULT_UPLOAD_BUCKET=local-bucket
+      - DEFAULT_UPLOAD_PROTOCOL=S3
       - BOTO_ENDPOINT_URL=http://motoserver.czidnet:4000
       - AWS_REGION=us-west-2
       - AWS_ACCESS_KEY_ID=test
