--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -36,7 +36,7 @@ uuid6 = "^2023.5.2"
 mypy = "^1.5.1"
 types-requests = "^2.31.0.2"
 boto3 = "^1.28.43"
-boto3-stubs = {extras = ["s3"], version = "^1.28.50"}
+boto3-stubs = {extras = ["s3", "sts"], version = "^1.28.61"}
 faker-enum = "^0.0.2"
 biopython = "^1.81"
 moto = "^4.2.3"
