--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
   # To use it from the CLI: aws --endpoint-url=http://localhost:4000 s3 ls
   # To reset all services without restarting the container: curl -X POST http://localhost:4000/moto-api/reset
   motoserver:
-    image: motoserver/moto:4.2.3
+    build: 
+      context: .
+      dockerfile: Dockerfile.motoserver
     ports:
       - "4000:4000"
     environment:
@@ -19,7 +21,7 @@ services:
       - .moto_recording:/moto/moto_recording
       - ./bin:/moto/bin
       - "/var/run/docker.sock:/var/run/docker.sock"
-    entrypoint: []
+    entrypoint: ["/bin/bash"]
     command: ["/moto/bin/init_moto.sh"]
   stepfunctions_local:
     container_name: stepfunctions_local_workflows
