--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
   # To use it from the CLI: aws --endpoint-url=http://localhost:4000 s3 ls
   # To reset all services without restarting the container: curl -X POST http://localhost:4000/moto-api/reset
   motoserver:
-    image: motoserver/moto:4.2.3
+    build: 
+      context: .
+      dockerfile: Dockerfile.motoserver
     ports:
       - "4000:4000"
     environment:
@@ -13,11 +15,27 @@ services:
       - MOTO_ENABLE_RECORDING=True
       - MOTO_S3_CUSTOM_ENDPOINTS=http://motoserver.czidnet:4000
       - S3_IGNORE_SUBDOMAIN_BUCKETNAME=True
+      - MOTO_DOCKER_NETWORK_NAME=czidnet
+      - MOTO_DOCKER_NETWORK_MODE=overlay
     volumes:
       - .moto_recording:/moto/moto_recording
       - ./bin:/moto/bin
-    entrypoint: []
+      - "/var/run/docker.sock:/var/run/docker.sock"
+    entrypoint: ["/bin/bash"]
     command: ["/moto/bin/init_moto.sh"]
+  stepfunctions_local:
+    container_name: stepfunctions_local_workflows
+    image: amazon/aws-stepfunctions-local
+    environment:
+      - BATCH_ENDPOINT=http://motoserver.czidnet:4000
+      - LAMBDA_ENDPOINT=http://motoserver.czidnet:4000
+      - AWS_ACCOUNT_ID=123456789012
+    ports:
+      - "8083:8083"
+    networks:
+      default:
+        aliases:
+          - sfn.czidnet
 
 networks:
   default:
