--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -43,6 +43,7 @@ moto = "^4.2.3"
 jinja2 = "^3.1.2"
 linkml = "^1.5.7"
 strcase = "^1.0.0"
+linkml-runtime = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core"]
