--- a/workflows/pyproject.toml
+++ b/workflows/pyproject.toml
@@ -38,6 +38,7 @@ boto3-stubs = {extras = ["s3"], version = "^1.28.50"}
 black = "^23.9.1"
 mypy = "^1.5.1"
 sqlalchemy_utils = "^0.41.1"
+mypy-boto3-sts = "^1.28.58"
 
 
 [build-system]
