--- a/workflows/docker-compose.yml
+++ b/workflows/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       # directory as its storage location instead so it works with our db snapshot
       # workflow.
       - PGDATA=/var/lib/platformics/data
-  workflow:
+  workflows:
     build:
       context: ".."
       dockerfile: "workflows/Dockerfile"
@@ -72,7 +72,7 @@ services:
     tty: true # Helps with pdb
     environment:
       <<: [*aws-variables, *db-variables, *redis-variables, *workflow-variables, *cerbos-variables]
-  workflow-worker:
+  workflows-worker:
     build:
       context: ".."
       dockerfile: "workflows/Dockerfile"
