--- a/workflows/docker-compose.yml
+++ b/workflows/docker-compose.yml
@@ -27,6 +27,7 @@ x-workflow-variables: &workflow-variables
   ? DEFAULT_UPLOAD_PROTOCOL=S3 # don't need this in workflows
   ? PLATFORMICS_WORKFLOW_RUNNER_PLUGIN=local
   ? PLATFORMICS_EVENT_BUS_PLUGIN=redis
+  ? SQS_QUEUE_URL=http://motoserver.czidnet:4000/123456789012/swipe-test-notifications-sfn-notifications-queue
 
 x-cerbos-variables: &cerbos-variables
   ? CERBOS_URL=http://wf-cerbos:3592
@@ -74,7 +75,6 @@ services:
     tty: true # Helps with pdb
     environment:
       <<: [*aws-variables, *db-variables, *redis-variables, *workflow-variables, *cerbos-variables]
-      SQS_QUEUE_URL: http://czidnet:5000/123456789012/swipe-test-notifications-sfn-notifications-queue
   workflows-worker:
     build:
       context: ".."
